Se cambia de Oracle a SQLServer
Queda pendiente ajustar la conexión

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe?serverTimezone=GMT-5
-spring.datasource.username=PY_EP
-spring.datasource.password=empresafinal
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-server.port= 8001
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=YourDatabaseName;encrypt=true;trustServerCertificate=true
+spring.datasource.username=YourUsername
+spring.datasource.password=YourPassword
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+server.port=8001
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=validate
+# Usar create la primera vez que se ejecuta
+# Luego cambiar a validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
