Ya se debería conectar a la BD
Obviamente no va a correr, pero la prueba funciona

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=YourDatabaseName;encrypt=true;trustServerCertificate=true
-spring.datasource.username=YourUsername
-spring.datasource.password=YourPassword
+spring.datasource.url=jdbc:sqlserver://localhost:59485;trustServerCertificate=true;databaseName=PruebaSQL
+spring.datasource.username=usuario
+spring.datasource.password=usuario
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8001
 
