--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
