--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url "https://jaspersoft.jfrog.io/artifactory/third-party-ce-artifacts/" }
 }
 
 javafx {
@@ -36,6 +37,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-logging'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'net.sf.jasperreports:jasperreports:6.20.0' // JasperReports
+    implementation 'com.lowagie:itext:2.1.7.js10'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
